--- a/README
+++ b/README
@@ -1,3 +1,15 @@
+RUNNING
+----------
+Run the following command in your terminal:
+mvn compile exec:exec
+
+
+
+
+
+DETAILS
+-------
+
 Directory Structure:
     src
         main        Our application
@@ -25,4 +37,6 @@ Definitions of Spring annotations and why they are needed in this code:
 
 
 Maven targets:
-    mvn package   Creates the big executable jar which has all the dependency jars inside
+    mvn package     Creates the big executable jar which has all the dependency jars inside
+    mvn compile     Compiles from source
+    mvn exec:exec   Starts the application
