[1929724] Copy /etc on "mvn install". [1861962] Use the binary file from /etc. Get path to the stuff that are out of the jar (currently only /etc) for normal compiled code vs compiled code into jar differently. First one assumes that class file is in <where etc directory is>/target/classes, the latter assumes the class files are in the same directory as where the etc directory is.

--- a/README
+++ b/README
@@ -37,6 +37,7 @@ Definitions of Spring annotations and why they are needed in this code:
 
 
 Maven targets:
-    mvn package     Creates the big executable jar which has all the dependency jars inside
+    mvn package     Creates executable jar
     mvn compile     Compiles from source
     mvn exec:exec   Starts the application
+    mvn install     Creates jar and copies all libraries to lib/ and binaries to etc/
